# dask-array

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.ai-docs/: README.md  block-info-layout-contract.md  blockwise.md  expression-system.md  io.md  layout.md  optimizations.md  reductions.md  slicing.md  testing.md
.claude/: settings.json
.claude/hooks/: check-docs-on-fresh.sh
.claude/skills/stateful-testing/: SKILL.md
.github/workflows/: ci.yml  publish.yml
bench/: README.md  _spy.py  adapter_stress.py  bench_paths.py  bench_rechunk_insertion.py  bench_records.py  bench_submission.py  bench_unify_policy.py  coverage_probe.py  diff_adversarial.py  diff_layers.py  diff_records.py  diff_review.py  e2e_transparent.py  profile_pipeline.py  rechunk_threshold.py  roundtrip_layers.py  synthetic_quantity_expression.py  tail_probe.py  tier_probe.py
crates/dask-array-python/: Cargo.toml
crates/dask-array-python/src/: arange.rs  arg_chunk.rs  blelloch.rs  blocks.rs  blockwise.rs  broadcast.rs  coarsen.rs  common.rs  concatenate.rs  creation.rs  cumulative.rs  diag.rs  expand_dims.rs  eye.rs  from_array.rs  from_map.rs  fused_blockwise.rs  gufunc.rs  lib.rs  linspace.rs  overlap.rs  rechunk.rs  reduction.rs  reshape.rs  shuffle.rs  slicing.rs  sliding_window.rs  squeeze.rs  stack.rs
dask_array/: __init__.py  _backends.py  _backends_array.py  _blockwise.py  _broadcast.py  _broadcast_to.py  _chunk.py  _chunk_types.py  _collection.py  _concatenate.py  _core_utils.py  _diagnostics.py  _dispatch.py  _einsum.py  _expr.py  _expr_flow.py  _gufunc.py  _histogram.py  _map_blocks.py  _materialize.py  _new_collection.py  _numpy_compat.py  _overlap.py  _rechunk.py  _reshape.py  _routines.py  _shuffle.py  _stack.py  _svg.py  _templates.py  _test_utils.py  _ufunc.py  _utils.py  _visualize.py  _xarray.py  chunk.py  fft.py  xarray.py
dask_array/_frisky/: __init__.py  arange.py  arg_chunk.py  base.py  blelloch.py  blocks.py  blockwise.py  broadcast.py  coarsen.py  collect.py  concatenate.py  creation.py  cumulative.py  diag.py  expand_dims.py  eye.py  from_array.py  from_map.py  fused_blockwise.py  graph_records.py  gufunc.py  inventory.py  linspace.py  overlap.py  random.py  rechunk.py  reduction.py  reshape.py  shuffle.py  slicing.py  sliding_window.py  squeeze.py  stack.py
dask_array/core/: __init__.py  _blockwise_funcs.py  _conversion.py  _from_graph.py
dask_array/creation/: __init__.py  _arange.py  _diag.py  _diagonal.py  _eye.py  _linspace.py  _mesh.py  _ones_zeros.py  _pad.py  _repeat.py  _tile.py  _tri.py  _utils.py
dask_array/io/: __init__.py  _base.py  _from_array.py  _from_delayed.py  _from_graph.py  _from_map.py  _from_npy_stack.py  _store.py  _tiledb.py  _to_npy_stack.py  _zarr.py
dask_array/linalg/: __init__.py  _cholesky.py  _lu.py  _norm.py  _qr.py  _solve.py  _svd.py  _tensordot.py  _utils.py
dask_array/manipulation/: __init__.py  _expand.py  _flip.py  _reshape.py  _roll.py  _transpose.py
dask_array/random/: __init__.py  _choice.py  _expr.py  _generator.py  _random_state.py  _utils.py
dask_array/reductions/: __init__.py  _arg_reduction.py  _common.py  _cumulative.py  _percentile.py  _reduction.py  _sliding_window.py  _trace.py
dask_array/routines/: __init__.py  _apply.py  _bincount.py  _broadcast.py  _coarsen.py  _diff.py  _gradient.py  _indexing.py  _insert_delete.py  _misc.py  _nonzero.py  _outer.py  _search.py  _select.py  _statistics.py  _topk.py  _triangular.py  _unique.py  _where.py
dask_array/slicing/: __init__.py  _basic.py  _blocks.py  _bool_index.py  _setitem.py  _squeeze.py  _utils.py  _vindex.py
dask_array/stacking/: __init__.py  _block.py  _concatenate.py  _simple.py  _stack.py
dask_array/templates/: array.html.j2
dask_array/tests/: conftest.py  strategies.py  test_api.py  test_binary_op_chunks.py  test_coarse_slice_through_blockwise.py  test_collection.py  test_creation.py  test_diagnostics.py  test_expr_flow.py  test_fft.py  test_frisky_from_array.py  test_frisky_inventory.py  test_frisky_nbytes.py  test_frisky_protocol.py  test_from_map.py  test_fuzz_optimize.py  test_gufunc.py  test_hdf5.py  test_lazy_metadata.py  test_linalg.py  test_map_blocks.py  test_map_blocks_multi_output.py  test_npy_stack.py  test_overlap_optimizer.py  test_public_namespace.py  test_random.py  test_rechunk.py  test_rechunk_pushdown.py  test_reductions.py  test_routines.py  test_shuffle_chunks.py  test_slice_pushdown.py  test_slice_through_blockwise.py  test_slice_through_overlap.py  test_slice_through_reshape.py  test_slicing.py  test_sliding_window_reductions.py  test_stable_names.py  test_stateful_array.py  test_transfer.py  (+3 more)
docs/: development.md  release.md
plans/: frisky-binary-records-gaps.md  frisky-rust-task-gen.md  reduce-dask-array-imports.md  unify-chunks-cost-aware.md  xarray-dask-integration.md
