[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dask-array"
version = "0.1.0"
description = "Parallel arrays with task graphs"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = [
    "dask>=2024.1.0",
    "jinja2>=3.1.6",
    "numpy>=2.0.0",
    "rich",
    "toolz>=0.8.2",
]

[project.optional-dependencies]
complete = [
    "zarr>=2.0",
    "scipy",
    "sparse",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "xarray",
    "hypothesis",
]

# Registers as "dask" to replace xarray's built-in DaskManager.
# See dask_array/_xarray.py for rationale.
[project.entry-points."xarray.chunkmanagers"]
dask = "dask_array._xarray:DaskArrayExprManager"

[tool.hatch.build.targets.wheel]
packages = ["dask_array"]

[tool.pytest.ini_options]
testpaths = ["dask_array/tests"]
addopts = "-v"
markers = [
    "slow: Skipped unless --runslow passed",
]
filterwarnings = [
    "error:::numpy[.*]",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",     # Module level import not at top of file
    "E721",     # Use `is` and `is not` for type comparisons
    "E731",     # Do not assign a `lambda` expression, use a `def`
    "E741",     # Ambiguous variable name
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "F811"]
"**/tests/*" = ["F401", "F811", "F821"]
"_core_utils.py" = ["F401"]
"_dispatch.py" = ["F401"]
"_numpy_compat.py" = ["F401"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
]
