[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "dask-array"
dynamic = ["version"]
description = "Parallel arrays with task graphs"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "dask>=2025.4.0",
    "jinja2>=3.1.6",
    "numpy>=2.0.0,!=2.4.0",
    "rich",
    "toolz>=0.8.2",
]

[project.urls]
Homepage = "https://github.com/mrocklin/dask-array"
Source = "https://github.com/mrocklin/dask-array"
Issues = "https://github.com/mrocklin/dask-array/issues"

[project.optional-dependencies]
complete = [
    "zarr>=2.0",
    "scipy",
    "h5py",
    "tiledb",
]
sparse = [
    "numba>=0.60; python_version < '3.13'",
    "sparse; python_version < '3.13'",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "xarray",
]

# Registers as "dask" to replace xarray's built-in DaskManager.
# See dask_array/_xarray.py for rationale.
[project.entry-points."xarray.chunkmanagers"]
dask = "dask_array._xarray:DaskArrayExprManager"

# Mixed Python/Rust build. The large Python package lives at the repo root
# (python-source = "."); the native accelerator is a small cdylib built into
# dask_array/_rust. Version is supplied from the Cargo package version
# (dynamic = ["version"] above), replacing the previous hatch-vcs scheme; wiring
# git-tag versioning back up is a release-time concern, not needed on this branch.
[tool.maturin]
manifest-path = "crates/dask-array-python/Cargo.toml"
module-name = "dask_array._rust"
python-source = "."

[tool.pytest.ini_options]
testpaths = ["dask_array/tests"]
addopts = "-v"
markers = [
    "slow: Skipped unless --runslow passed",
    "gpu: Requires a GPU backend",
]
filterwarnings = [
    "error:::numpy[.*]",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",     # Module level import not at top of file
    "E721",     # Use `is` and `is not` for type comparisons
    "E731",     # Do not assign a `lambda` expression, use a `def`
    "E741",     # Ambiguous variable name
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "F811"]
"**/tests/*" = ["F401", "F811", "F821"]
"_core_utils.py" = ["F401"]
"_dispatch.py" = ["F401"]
"_numpy_compat.py" = ["F401"]

[dependency-groups]
dev = [
    "maturin>=1.8,<2",
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
]
