[build-system]
requires = ["hatchling>=1.18", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dask-array"
dynamic = ["version"]
description = "Dask array with query optimization"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "dask>=2025.4.0",
    "jinja2>=3.1.6",
    "numpy>=2.0.0,!=2.4.0",
    "rich",
    "toolz>=0.8.2",
]

[project.urls]
Homepage = "https://github.com/mrocklin/dask-array"
Source = "https://github.com/mrocklin/dask-array"
Issues = "https://github.com/mrocklin/dask-array/issues"

[project.optional-dependencies]
complete = [
    "zarr>=2.0",
    "scipy",
    "h5py",
    "icechunk; python_version >= '3.12'",
    "tiledb",
]
sparse = [
    "numba>=0.60; python_version < '3.13'",
    "sparse; python_version < '3.13'",
]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "xarray",
]

# Registers as "dask" to replace xarray's built-in DaskManager.
# See dask_array/_xarray.py for rationale.
[project.entry-points."xarray.chunkmanagers"]
dask = "dask_array._xarray:DaskArrayExprManager"

# Pure-Python by default: `pip install -e .` (hatchling) needs no Rust toolchain
# and installs the package alone. The Python/dask path is fully functional without
# the native extension, and the Frisky path falls back to a pure-Python records
# layer when `dask_array._rust` is absent.

# Version is derived from git tags (see docs/development.md → cutting a release).
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["dask_array"]
# A locally-built _rust extension is a maturin artifact; keep hatchling
# wheels/sdists pure-Python so `uv build` is deterministic regardless of dev state.
exclude = [
    "dask_array/_rust*",
    "/dask_array/_test_utils.py",
    "/dask_array/tests",
    "/dask_array/tests/**",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "dask_array/_rust*",
    "/.ai-docs",
    "/.claude",
    "/AGENTS.md",
    "/bench",
    "/docs/development.md",
    "/plans",
    "/target",
    "/target-linux-aarch64",
    "/target-linux-x86_64",
]

# Native accelerator (opt-in). Build it into the source tree with
# `maturin develop --release`; maturin reads this config (ignored by hatchling).
# The cdylib lands at dask_array/_rust and the editable install picks it up.
[tool.maturin]
manifest-path = "crates/dask-array-python/Cargo.toml"
module-name = "dask_array._rust"
python-source = "."

[tool.pytest.ini_options]
testpaths = ["dask_array/tests"]
addopts = "-v"
markers = [
    "slow: Skipped unless --runslow passed",
    "gpu: Requires a GPU backend",
]
filterwarnings = [
    "error:::numpy[.*]",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",     # Module level import not at top of file
    "E721",     # Use `is` and `is not` for type comparisons
    "E731",     # Do not assign a `lambda` expression, use a `def`
    "E741",     # Ambiguous variable name
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401", "F403", "F811"]
"**/tests/*" = ["F401", "F811", "F821"]
"_core_utils.py" = ["F401"]
"_dispatch.py" = ["F401"]
"_numpy_compat.py" = ["F401"]

[dependency-groups]
dev = [
    "maturin>=1.8,<2",
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
]
